# gamesparks-cpp-sdk

./: .gitignore  CHANGELOG.md  README.md
base/: README.md
base/build_scripts/: CMakeLists.txt  clean.sh  gs_android_install_sdkfeatues.py  gs_android_sdk-dist.bat  gs_android_sdk-dist.sh  gs_android_start_emulator.py  gs_create_dist_packages.py  gs_ios_sdk-dist.sh  gs_osx_sdk-dist.sh  gs_sdk-dist.bat  gs_sdk-dist.sh  gs_win-dist.py  gs_win32_vs2012_sdk-dist.bat  gs_win32_vs2013_sdk-dist.bat  gs_win64_vs2012_sdk-dist.bat  gs_win64_vs2013_sdk-dist.bat  gs_win_vs2012_sdk-dist.bat  gs_win_vs2013_sdk-dist.bat  make_release.py
base/build_scripts/jenkins/: build_and_run_tests.py  build_unreal_sample.py  config.py  config.sh  install_dependencies.py  install_dependencies.sh  main.py  main.sh
base/build_scripts/jni/: Android.mk  Application.mk
base/dependencies/cjson/: cJSON.cpp
base/dependencies/easywsclient/: easywsclient.cpp  easywsclient.hpp
base/dependencies/google/: timesupport.cpp  timesupport.h
base/dependencies/openssl-1.0.1j/include/openssl/: opensslconf.h
base/dependencies/openssl/include/openssl/: dtls1.h
base/guide/: README.md
base/include/GameSparks/: Cocos2dxPlatform.h  GS.h  GSConnection.h  GSData.h  GSDateTime.h  GSLeakDetector.h  GSMessage.h  GSObject.h  GSOptional.h  GSPlatformDeduction.h  GSRequest.h  GSRequestData.h  GSTime.h  GSTypedRequest.h  GSTypedResponse.h  GSUtil.h  GSVersion.h  IGSData.h  IGSPlatform.h  MarmaladePlatform.h  gsstl.h
base/licenses/: hmac
base/samples/: sample01_connect.cpp  sample02_connect_static.cpp  sample03_authentication.cpp  sample04_listachievements.cpp  sample05_challangerequest.cpp  sample06_stresstest.cpp  sample07_durablerequests.cpp  sampleExtra01DateTimeConversion.cpp  sample_configuration.h  sample_extra_01_datetime_conversion.cpp
base/samples/extra/: EASTLMem.cpp  UNIX2003_Fix.c  usleep.cpp  usleep.h
base/src/: GS.cpp  GSConnection.cpp  GSData.cpp  GSDateTime.cpp  GSIosHelper.mm  GSMessage.cpp  GSRequest.cpp  GSTypedResponse.cpp  GSUtil.cpp  IGSPlatform.cpp
base/templates/: GSMessages.cpp.ftl  GSMessages.h.ftl  GSRequests.h.ftl  GSResponses.h.ftl  _GS_Macros.ftl
cocos2dx/: README.md  build_sample.py  install_dependencies.py  setup_sdk.py
cocos2dx/Sample/: CMakeLists.txt
cocos2dx/Sample/Classes/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  ScreenLog.cpp  ScreenLog.h
cocos2dx/Sample/proj.android/: AndroidManifest.xml  ant.properties  compile_sample.py  local.properties
cocos2dx/Sample/proj.android/jni/: Android.mk  Application.mk
cocos2dx/Sample/proj.ios_mac/CocosSample.xcodeproj/: project.pbxproj
cocos2dx/Sample/proj.ios_mac/ios/: Info.plist
cocos2dx/Sample/proj.ios_mac/mac/: Info.plist
cocos2dx/Sample/proj.win32/: CocosSample.vcxproj  CocosSample.vcxproj.filters  UpgradeLog.htm
cocos2dx/Sample/proj.win32/Backup/: CocosSample.vcxproj
cocos2dx/guide/: README.md
docs/: Doxyfile.in  README.md  config.py  make.py  publish_docs.py
docs/files/: customdoxygen.css  customdoxygen.js  header.html.in
marmalade/: README.md  copy_sdk_sources.py
marmalade/GameSparks/: GameSparks.mkf
marmalade/guide/: README.md
marmalade/sample/: run_sample.py  run_sample_qemu.py  sample.cpp  sample.mkb
marmalade/sample/data/: ident.free
marmalade/sample/data-ram/: uident.free
marmalade/sample/project_sample/: android (default).config  mkb-osx.txt  mkb-scons.txt  project.config
testing/: README.md
testing/build_scripts/: CMakeLists.txt  gs_ios-update_testproject.py  gs_osx-build_and_test.sh  gs_osx-buildtests.py  gs_osx-runtests.py  gs_win-buildtests.py  gs_win-runtests.py  gs_win_android-buildtests.py  gs_win_build_and_test.bat
testing/build_scripts/ios_project/: test.template.cc
testing/build_scripts/ios_project/ALL_TEST_APP/ALL_TEST_APP.xcodeproj/: project.pbxproj
testing/build_scripts/ios_project/ALL_TEST_APP/ALL_TEST_STATICLIBTests/: GoogleTests.mm  SampleTest.cpp
testing/build_scripts/jni/: Android.mk  Android.template.mk  Application.mk
testing/dependencies/gtest-1.7.0/: CMakeLists.txt
testing/dependencies/gtest-1.7.0/jni/: Android.mk
testing/tests/base/sampletest/: unittest_implementation.cc
testing/tests/base/sampletest2/: unittest.cc  unittest_implementation.cc
testing/tests/base/sampletest3/: unittest.cc  unittest_implementation.cc
tests/: CMakeLists.txt  test_detail.xml
tests/base/: BugUninitializedGameSparksAuthenticated.cpp  TestAuthentication.cpp  TestConnect.cpp  TestDurableRequests.cpp  TestMessageDispatching.cpp  TestNetworkFailures.cpp  TestPlatform.h  TestStress.cpp  test_attach_callbacks.cpp  test_authentication.cpp  test_connect.cpp  test_device_authentication.cpp  test_message_dispatching.cpp  test_stress.cpp  test_user_data_is_copied.cpp
tests/gtest/: CMakeLists.txt
unrealengine/: README.md  copy_changes.bat  copy_changes.py  copy_changes.sh  setup.bat  setup.sh  setup_plugin.py  setup_sample.py
unrealengine/GameSparksSample/: GameSparksSample.uproject
unrealengine/GameSparksSample/Config/: DefaultEngine.ini
unrealengine/GameSparksSample/Content/: ActorForGS.uasset  GameSparksLevel.umap  GameSparksStuff.uasset
unrealengine/GameSparksSample/Content/Blueprints/: ActorForGS.uasset  BP_TestingGameMode.uasset  CustomGameMode.uasset
unrealengine/GameSparksSample/Content/Level/: ActorUsageLevel.umap  ComponentAndBlueprints.umap  Testing.umap
unrealengine/GameSparksSample/Content/Menu/: BasicMenu.uasset  GameSparksTestMenu.uasset  NewBlueprint.uasset
unrealengine/plugin/GameSparks/Source/GameSparks/: GameSparks.Build.cs
unrealengine/plugin/GameSparks/Source/GameSparks/Private/: 0001GSAmalgamated.cpp  AuthenticationRequestProxy.cpp  AuthenticationRequestProxy.h  GSAcceptChallengeRequest.cpp  GSAccountDetailsRequest.cpp  GSActor.cpp  GSActor.h  GSAmazonBuyGoodsRequest.cpp  GSAmazonConnectRequest.cpp  GSAnalyticsRequest.cpp  GSAroundMeLeaderboardRequest.cpp  GSAroundMeLeaderboardRequest.h  GSAuthenticationRequest.cpp  GSBuyVirtualGoodsRequest.cpp  GSChangeUserDetailsRequest.cpp  GSChatOnChallengeRequest.cpp  GSCreateTeamRequest.cpp  (+76 more)
(+1 files in other folders)
